remove apache arrow -> migrate to jsonb